--- a/src/components/UserCheckBoxes/UserCheckBoxes.css
+++ b/src/components/UserCheckBoxes/UserCheckBoxes.css
@@ -7,6 +7,7 @@
 	margin-left: 16px;
 	flex-wrap: wrap;
 	gap: 10px;
+	touch-action: none;
 }
 
 .rcb-checkbox-offset {
