--- a/src/components/UserOptions/UserOptions.css
+++ b/src/components/UserOptions/UserOptions.css
@@ -7,6 +7,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	gap: 10px;
+	touch-action: none;
 }
 
 .rcb-options-offset {
